# relatable

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: complete_game.rs  embedding_space.rs  game.rs  lib.rs  telemetry.rs  test_data.rs
docs/: 243.js  668.js  CNAME  index.html  index.js
relatable-mobile/: package-lock.json  package.json
relatable-mobile/public/: index.html
relatable-mobile/src/: App.js
relatable-mobile/src/components/: Feedback.js  WoshCarousel.js
src/: main.rs
web-client/: Cargo.toml  build-for-pages.bat  package-lock.json  package.json  webpack.config.js
web-client/js/: index.js  renderer.js
web-client/src/: embedding_space.rs  game.rs  lib.rs  message.rs  telemetry.rs
web-client/static/: fasttext_filtered.embspace  glove_filtered.embspace  index.html
web-server/: Cargo.toml  feedback.db
web-server/src/: main.rs
