[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
warp = { version = "0.3" }
tokio = { version = "1.20", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-stream = "0.1"
pretty_env_logger = "0.4"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = { version = "3.2", features = ["derive"] }
once_cell = "1.15"
# rusqlite = { version = "0.28.0", features = ["bundled"] }